# raider

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  script.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  flake.yml  lint.yml  mypy.yml  pylint.yml  python-publish.yml  sphinx.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: attacks.rst  cli.rst  flows.rst  internal.rst  macros.rst  user.rst
docs/api/internal/: config.rst  flowstore.rst  logger.rst  parsers.rst  project.rst  projects.rst  raider.rst  search.rst  structures.rst  utils.rst
docs/api/user/: attack.rst  attacks.rst  flow.rst  flowgraph.rst  flowgraphs.rst  flows.rst  operations.rst  plugin.rst  plugins.rst  request.rst  requests.rst  user.rst
docs/case_studies/: architecture.rst  lisp.rst  macros.rst
docs/dev/: attacks.rst  flows.rst  plugins.rst  special_variables.rst  users.rst
docs/diagrams/: chaining_flows.uml  graph.uml  raider_flows.uml
docs/examples/: example.rst  writing_custom_operations.rst  writing_custom_plugins.rst  writing_macros.rst
docs/howtos/: writing_custom_operations.rst
docs/overview/: faq.rst  glossary.rst  install.rst  raider.rst
docs/tutorials/: authenticationtest.com.rst  getting_started.rst  juiceshop.rst  keycloak.rst  prerequisites.rst  reddit.rst
docs/user/: beginner-tutorial.rst  faq.rst  install.rst  prerequisites.rst  tutorials.rst
examples/authenticationtest.com/basic_authentication/: main.hy
examples/authenticationtest.com/complex_form_authentication/: main.hy
examples/authenticationtest.com/delayed_authentication/: main.hy
examples/authenticationtest.com/dynamic_field_challenge/: main.hy
examples/authenticationtest.com/interactive_authentication/: main.hy
examples/authenticationtest.com/multi_step_authentication/: main.hy
examples/authenticationtest.com/simple_form_authentication/: main.hy
examples/authenticationtest.com/xsrf_challenge/: main.hy
examples/delayed_authentication/: main.hy
examples/ghost/: main.hy  users.hy
examples/juiceshop/: 01_main.hy  02_registration.hy  03_login.hy  04_sqli.hy  05_xss.hy  06_csp.hy
examples/mastodon/: 01_main.hy  02_authentication.hy  03_functions.hy
examples/multi_step_authentication/: main.hy
examples/nextcloud/: 01_main.hy  02_authentication.hy  03_functions.hy
examples/reddit/: 01_main.hy  02_authentication.hy  03_functions.hy  09_users.hy
examples/ttrss/: 01_main.hy
raider/: __init__.py  __version__.py  application.py  attacks.py  authentication.py  cli.py  config.py  flow.py  flowgraph.py  flowstore.py  functions.py  fuzzing.py  logger.py  macros.hy  operations.py  projects.py  raider.py  request.py  search.py  structures.py  user.py  utils.py
raider/parsers/: authenticate.py  config.py  delete.py  edit.py  inspect.py  new.py  run.py  run_flow.py  run_graph.py  shell.py  show.py
raider/plugins/: __init__.py  basic.py  common.py  modifiers.py  parsers.py  processors.py
raider/plugins/basic/: __init__.py  command.py  cookie.py  file.py  header.py  html.py  json.py  jsonp.py  prompt.py  regex.py  variable.py
