[tool.poetry]
    name = "raider"
    version = "0.2.3"
    description = "Web authentication testing framework"
    authors = ["Daniel Neagaru <daniel@digeex.de>"]
    packages = [
      { include = "raider" }
    ]
    license = "GPL-3.0-or-later"
    readme = "README.md"
    homepage = "https://github.com/OWASP/raider"
    repository = "https://github.com/OWASP/raider"
    documentation = "https://raider.readthedocs.io/en/latest/"
    include = [
      "LICENSE",
      "CHANGELOG.md",
      "docs/**/*",
      "examples",
      "scripts"
    ]
    keywords = ["authentication", "security", "raider", "digeex", "hy"]
    classifiers = [
      "Development Status :: 3 - Alpha",
      "Environment :: Console",
      "Intended Audience :: Developers",
      "Intended Audience :: System Administrators",
      "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
      "Natural Language :: English",
      "Operating System :: POSIX :: Linux",
      "Programming Language :: Lisp",
      "Programming Language :: Python :: 3.8",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Topic :: Internet :: WWW/HTTP",
      "Topic :: Security",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Topic :: Software Development :: Testing",
    ]

[tool.poetry.scripts]
    raider = "raider.cli:main"

[tool.poetry.dependencies]
    python = ">=3.8,<3.11"
    hy = "^1.0.a4"
    requests = "^2.25.1"
    bs4 = "^0.0.1"
    funcparserlib = "^1.0.0a0"
    ipython = "^8.4.0"
pkce = "^1.0.3"
igraph = "^0.10.2"

[tool.poetry.dev-dependencies]
    mypy = "^0.991"
    pre-commit = "^2.20.0"
    flake8 = "^5.0.4"
    pylint = "^2.14.4"
    black = "^22.1.0"
    isort = "^5.9.1"
    sphinxcontrib-needs = "^0.7.9"
    sphinx-autodoc-typehints = "^1.18.3"
    sphinx-rtd-theme = "^1.0.0"
    sphinxcontrib-plantuml = "^0.24"
tox = "^3.25.1"

[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"

[tool.black]
    line-length = 79
    target-version = ['py39']
    include = '\.pyi?$'
    exclude = '''
    (
      /(
        | \.git
        | \.tox
        | dist
	| docs
	| scripts
      )/
    )
    '''

[tool.isort]
    multi_line_output = 3
    include_trailing_comma = true
    force_grid_wrap = 0
    use_parentheses = true
    line_length = 79


[tool.pylint.master]
    ignore-patterns = '''
         \.git
	 |conf.py
	 |scripts/*
    '''

[tool.pylint.message_control]
    disable = '''
    import-error,
    '''


[tool.mypy]
    python_version = "3.10"
    follow_imports = "silent"
    strict_optional = true
    warn_redundant_casts = true
    warn_unused_ignores = true
    disallow_any_generics = true
    check_untyped_defs = true
    no_implicit_reexport = true
    disallow_untyped_defs = true
    exclude = "scripts"
    overrides = [

    # TODO
    # something doesn't work with requests types in the virtual environment
    { module = "requests.*", ignore_missing_imports = true },

    ]
